# bot-apis

./: .env.example  .gitignore  .pylintrc  .replit  pyproject.toml  replit.nix  requirements.txt  run_apps.py
bot-api/: .flake8  __main__.py  pyproject.toml  requirements.txt  settings.dev.yaml  settings.yaml
bot-api/domain/: common.py
relay-server/: __main__.py  pyproject.toml
relay-server/app/: base.py  config.py  decorators.py  howblox.py  redis.py  types.py
relay-server/app/endpoints/: cache_lookup.py  stats.py  verification.py  verifyall.py
relay-server/app/events/: guild_join.py  guild_remove.py  member_ban.py  member_join.py  member_unban.py  ready.py
relay-server/app/web/: server.py
