[tool.poetry]
name = "bot-api"
version = "0.1.0"
description = ""
authors = ["Howblox"]
readme = "README.md"
packages = [{include = "bot-api"}, {include = "relay-server"}]

[tool.poetry.dependencies]
python = "<3.13, >=3.12"
uvicorn = "^0.27.0"
blacksheep = "^2.0.6"
uvloop = "^0.19.0"
essentials-configuration = "^2.0.4"
markupsafe = "^2.1.4"
pydantic = "^2.5.3"
rich = "^13.7.0"
howblox-lib = {git = "https://github.com/howblox/howblox-lib"}
attrs = "^23.2.0"
python-dotenv = "^1.0.1"
discord-py = "2.4.0"
gunicorn = "^21.2.0"
hikari = "^2.0.0.dev126"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"